added social icon

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       href="https://fonts.googleapis.com/css2?family=Monoton&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <title>Kishor</title>
   </head>
@@ -30,7 +34,7 @@
     <div class="name"><h1>KISHOR ROY</h1></div>
 
     <div class="nav">
-      <ul>
+      <ul class="nav-list">
         <li>
           <a href="__#" class="nav__link"
             >Home
@@ -66,6 +70,23 @@
               ><span class="dot"></span><span class="dot"></span
               ><span class="dot"></span></span
           ></a>
+        </li>
+      </ul>
+      <ul class="social">
+        <li>
+          <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
         </li>
       </ul>
     </div>
