--- a/index.html
+++ b/index.html
@@ -74,19 +74,31 @@
       </ul>
       <ul class="social">
         <li>
-          <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/kishor.roy.923/" target="_blank"
+            ><i class="fa fa-facebook" aria-hidden="true"></i
+          ></a>
         </li>
         <li>
-          <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+          <a href="https://twitter.com/Kishorroy93" target="_blank"
+            ><i class="fa fa-twitter" aria-hidden="true"></i
+          ></a>
         </li>
         <li>
-          <a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+          <a
+            href="https://www.youtube.com/channel/UCJGvhHR9HH0MiTv0Kn8iFcQ"
+            target="_blank"
+            ><i class="fa fa-youtube" aria-hidden="true"></i
+          ></a>
         </li>
         <li>
-          <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+          <a href="www.linkedin.com/in/kishorroy93" target="_blank"
+            ><i class="fa fa-linkedin" aria-hidden="true"></i
+          ></a>
         </li>
         <li>
-          <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/_kishorroy/" target="_blank"
+            ><i class="fa fa-instagram" aria-hidden="true"></i
+          ></a>
         </li>
       </ul>
     </div>
