--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           ></a>
         </li>
         <li>
-          <a href="www.linkedin.com/in/kishorroy93" target="_blank"
+          <a href="https://www.linkedin.com/in/kishorroy93/" target="_blank"
             ><i class="fa fa-linkedin" aria-hidden="true"></i
           ></a>
         </li>
